# Raspberry_pi_project

./: LICENSE.md  README.md
VoiceAssistant/: .gitignore  CMakeLists.txt  Doxyfile
VoiceAssistant/documentation/html/: AudioAPIHandler_8cpp.html  AudioAPIHandler_8cpp__incl.dot  AudioAPIHandler_8hpp.html  AudioAPIHandler_8hpp__dep__incl.dot  AudioAPIHandler_8hpp__incl.dot  AudioAPIHandler_8hpp_source.html  AudioReader_8cpp.html  AudioReader_8cpp__incl.dot  AudioReader_8hpp.html  AudioReader_8hpp__dep__incl.dot  AudioReader_8hpp__incl.dot  AudioReader_8hpp_source.html  AudioRecorder_8cpp.html  AudioRecorder_8cpp__incl.dot  AudioRecorder_8hpp.html  AudioRecorder_8hpp__dep__incl.dot  AudioRecorder_8hpp__incl.dot  AudioRecorder_8hpp_source.html  annotated.html  classAudioAPIHandler-members.html  classAudioAPIHandler.html  classAudioAPIHandler__coll__graph.dot  classAudioReader-members.html  classAudioReader.html  classAudioRecorder-members.html  classAudioRecorder.html  classes.html  dir_000001_000000.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_08d237fc27d4ecd563f71c5d52f2fecc_dep.dot  dir_09e761304027c904456130627fd4dcf5.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  libraries_8hpp.html  libraries_8hpp__dep__incl.dot  (+4 more)
VoiceAssistant/includes/: AudioAPIHandler.hpp  AudioReader.hpp  AudioRecorder.hpp  libraries.hpp
VoiceAssistant/scripts/: add_class.sh  launch_unix.sh
VoiceAssistant/sources/: AudioAPIHandler.cpp  AudioReader.cpp  AudioRecorder.cpp  main.cpp
(+48 files in other folders)
